--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,9 +1,13 @@
 .Dictionary section {
-  background: white;
-  padding: 30px;
+  background: #cadefc;
+  padding: 12px;
   border-radius: 10px;
   box-shadow: 0 10px 20px rgb(0 0 0 / 10%);
-  margin: 20px 0;
+  margin: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 780px;
+  font-size: 15px;
 }
 
 section input {
