--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,13 @@
 body {
-  margin: 0;
   font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #cadefc;
+  height: 100%;
+  background-image: url(./images/books.jpeg);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 code {
