changed section colour

--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,5 +1,5 @@
 .Dictionary section {
-  background: #e4dbff;
+  background: #bdbaff;
   padding: 12px;
   border-radius: 10px;
   box-shadow: 0 10px 20px rgb(0 0 0 / 10%);
