--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+@media (max-width: 576px) {
+  .Dictionary {
+    text-align: center;
+    font-size: 20px;
+  }
+  img {
+    display: none;
+  }
+}
