--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,10 +1,10 @@
 .Dictionary section {
-  background: #c6c6c6;
+  background: #cadefc;
   opacity: 86%;
   padding: 12px;
   border-radius: 10px;
   box-shadow: 0 10px 20px rgb(0 0 0 / 10%);
-  margin: 15px;
+  margin: 13px;
   margin-left: auto;
   margin-right: auto;
   width: 730px;
